--- a/notes/1 Fleeting Notes/2022-08-29 Science (F).md
+++ b/notes/1 Fleeting Notes/2022-08-29 Science (F).md
@@ -4,11 +4,11 @@
 	- These forces hold nuclei together
 - Alpha, beta, and gamma radiation
 - Ionising radiation is a form of radiation that contain enough energy to make an atom into an ion.
-	- This is formed by radioactive decay. Decay a process that unstable atoms undergo to become more stable[^1]
-		- $\alpha$ particles (consisting of two protons and two neutrons) are released when the nucleus is unstable.
-		- $^A_{Z}X\to^{A-4}_{Z-2}Y+^4_{2}\alpha$
-			- e.g. $^{233}_{92}U\to^{229}_{90}Th+^4_{2}\alpha$
-			- Extremely slow, but also has high ionising, does not travel far.
+	- ~~This is formed by radioactive decay. Decay a process that unstable atoms undergo to become more stable[^1]~~
+		- ~~$\alpha$ particles (consisting of two protons and two neutrons) are released when the nucleus is unstable~~.
+		- ~~$^A_{Z}X\to^{A-4}_{Z-2}Y+^4_{2}\alpha$~~
+			- e.g. ~~$^{233}_{92}U\to^{229}_{90}Th+^4_{2}\alpha$~~
+			- ~~Extremely slow, but also has high ionising, does not travel far.~~
 - Isotopes are atoms that have the same number of protons, but different number of neutrons, which can easily become unstable as it creates more distance between the protons, which increases the influence of electromagnetic force.
 
 	[^1]: Citation Needed
